[package]
name          = "image-decompose"
description   = "Decomposes image into separate channels in different colour spaces"
version       = "0.3.0"
readme        = "README.md"
categories    = ["graphics", "multimedia::images"]
keywords      = ["rgb", "lab", "luv", "hsl", "image"]
authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
license       = "GPL-3.0-or-later"
repository    = "https://github.com/mina86/image-decompose"
documentation = "https://docs.rs/image-decompose"
edition       = "2018"

[dependencies]
clap = "3.0.0-beta.2"
image = "0.23"
itertools = "0.10"
lab = "0.9"
luv = "0.9"
rayon = "1.5"
srgb = "0.2"
webp = "0.1"
