[package]
name          = "image-decompose"
description   = "Decomposes image into separate channels in different colour spaces"
version       = "0.4.2"
readme        = "README.md"
categories    = ["graphics", "multimedia::images"]
keywords      = ["rgb", "lab", "luv", "hsl", "image"]
authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
license       = "GPL-3.0-or-later"
repository    = "https://github.com/mina86/image-decompose"
documentation = "https://docs.rs/image-decompose"
edition       = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
image = "0.25"
lab = "0.11"
luv = "0.9"
rayon = "1.10"
srgb = "0.3"
webp = "0.3"
